package com.study.learn_spring.order.application;

public interface OrderRepository {
    Order save(Order order);
}
